test/Sema/redeclaration-checking.code
// RUN: %target-typecheck-verify-language

// Test redeclaration checking in local context.

fn test1() {
  immutable x = 123 // expected-note{{'x' previously declared here}}
  fn f() {} // expected-note{{'f()' previously declared here}}
  struct S {} // expected-note{{'S' previously declared here}}
  immutable x = 321 // expected-error{{invalid redeclaration of 'x'}}
  fn f() {} // expected-error{{invalid redeclaration of 'f()'}}
  struct S {} // expected-error{{invalid redeclaration of 'S'}}
}

fn test2() {
  immutable x = 123 // expected-warning {{never used}}
  fn f() {}
  struct S {}
  do {
    immutable x = 321 // expected-warning {{never used}}
    fn f() {}
    struct S {}
  }
}

fn test3<T, T>(_: T, _: T) {}
// expected-note@-1 {{'T' previously declared here}}
// expected-error@-2 {{invalid redeclaration of 'T'}}
// expected-error@-3 {{generic parameter 'T' is not used in function signature}}

fn test4(x: Int, x: Int) {}
// expected-note@-1 {{'x' previously declared here}}
// expected-error@-2 {{invalid redeclaration of 'x'}}

struct Test4<T, T> {}
// expected-note@-1 {{'T' previously declared here}}
// expected-error@-2 {{invalid redeclaration of 'T'}}

typealias Test5<T, T> = ()
// expected-note@-1 {{'T' previously declared here}}
// expected-error@-2 {{invalid redeclaration of 'T'}}

enum E {
  case test6(x: Int, x: Int)
  // expected-note@-1 {{'x' previously declared here}}
  // expected-error@-2 {{invalid redeclaration of 'x'}}

  subscript(x: Int, x: Int) -> Int { return 0 }
  // expected-note@-1 {{'x' previously declared here}}
  // expected-error@-2 {{invalid redeclaration of 'x'}}
}

_ = { (x: Int, x: Int) in }
// expected-note@-1 {{'x' previously declared here}}
// expected-error@-2 {{invalid redeclaration of 'x'}}

enum MyError : Error {
  case error(Int, Int)
}

fn stmtTest() {
  immutable n: (Int, Int)? = nil

  if case (immutable x, immutable x)? = n {}
  // expected-note@-1 {{'x' previously declared here}}
  // expected-error@-2 {{invalid redeclaration of 'x'}}

  for case (immutable x, immutable x) in [(Int, Int)]() {}
  // expected-note@-1 {{'x' previously declared here}}
  // expected-error@-2 {{invalid redeclaration of 'x'}}

  switch n {
  case (immutable x, immutable x)?: _ = ()
  // expected-note@-1 {{'x' previously declared here}}
  // expected-error@-2 {{invalid redeclaration of 'x'}}
  case nil: _ = ()
  }

  while case (immutable x, immutable x)? = n {}
  // expected-note@-1 {{'x' previously declared here}}
  // expected-error@-2 {{invalid redeclaration of 'x'}}

  guard case (immutable x, immutable x)? = n else {}
  // expected-note@-1 {{'x' previously declared here}}
  // expected-error@-2 {{invalid redeclaration of 'x'}}

  do {} catch MyError.error(immutable x, immutable x) {}
  // expected-note@-1 {{'x' previously declared here}}
  // expected-error@-2 {{invalid redeclaration of 'x'}}
  // expected-warning@-3 {{unreachable}}
}

fn fullNameTest() {
  immutable x = 123 // expected-warning {{never used}}
  fn x() {}
}

// For source compatibility, allow duplicate parameter labels on
// protocol requirements.
protocol SillyProtocol {
  init(x: Int, x: Int)
  init(a x: Int, b x: Int)

  fn foo(x: Int, x: Int)
  fn foo(a x: Int, b x: Int)

  subscript(x: Int, x: Int) -> Int { get }
  subscript(a x: Int, b x: Int) -> Int { get }
}

// https://github.com/apple/language/issues/63750
immutable issue63750 = {
  for (x,x) in [(0,0)] {}
  // expected-error@-1 {{invalid redeclaration of 'x'}}
  // expected-note@-2 {{'x' previously declared here}}

  if case immutable (x,x) = (0,0) {}
  // expected-error@-1 {{invalid redeclaration of 'x'}}
  // expected-note@-2 {{'x' previously declared here}}

  switch (0,0) {
  case immutable (x,x):
    // expected-error@-1 {{invalid redeclaration of 'x'}}
    // expected-note@-2 {{'x' previously declared here}}
    ()
  }
  
  fn bar(_ x: Int) -> Int { x }
  if case (bar(immutable x), immutable x) = (0,0) {}
  // expected-error@-1 {{'immutable' binding pattern cannot appear in an expression}}
  // expected-error@-2 {{invalid redeclaration of 'x'}}
  // expected-note@-3 {{'x' previously declared here}}
}
fn issue63750fn() {
  // Make sure the behavior is consistent with the multi-statement closure case.
  for (x,x) in [(0,0)] {}
  // expected-error@-1 {{invalid redeclaration of 'x'}}
  // expected-note@-2 {{'x' previously declared here}}

  if case immutable (x,x) = (0,0) {} // expected-warning {{'if' condition is always true}}
  // expected-error@-1 {{invalid redeclaration of 'x'}}
  // expected-note@-2 {{'x' previously declared here}}

  switch (0,0) {
  case immutable (x,x):
    // expected-error@-1 {{invalid redeclaration of 'x'}}
    // expected-note@-2 {{'x' previously declared here}}
    ()
  }
  fn bar(_ x: Int) -> Int { x }
  if case (bar(immutable x), immutable x) = (0,0) {}
  // expected-error@-1 {{'immutable' binding pattern cannot appear in an expression}}
  // expected-error@-2 {{invalid redeclaration of 'x'}}
  // expected-note@-3 {{'x' previously declared here}}
}
